--- a/src/aspnetcore-angular2-seed/package.json
+++ b/src/aspnetcore-angular2-seed/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "q": "^1.4.1",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "watch": "0.19.2"
   }
 }
